--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==4.4.0
+python-decouple==3.5
 pytz==2021.3
 requests==2.26.0
 sqlparse==0.4.2
